<resources>
    <string name="app_name">MatchTracker Pro</string>
    <string name="goals">Tore</string>
    <string name="assists">Vorlagen</string>
    <string name="yellow_cards">Gelbe Karten</string>
    <string name="red_cards">Rote Karten</string>
    <string name="table">Tabelle</string>
    <string name="statistics">Statistiken</string>
    <string name="premier_league">Premier League</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="ligue_1">Ligue 1 Uber Eats</string>
    <string name="la_liga">LaLiga</string>
    <string name="serie_a">Serie A</string>
    <string name="teamColor">Vereinsfarbe:</string>
    <string name="stadium">Stadion:</string>
    <string name="seats">Sitzplätze:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>