<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_green"
        tools:context=".ui.StatisticFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_statistic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/statistic_item" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_top"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/light_green"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabIndicatorColor="@color/white"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ti_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ti_statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistics" />

        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_bottom"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/light_green"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_top"
            app:tabIndicatorColor="@color/white"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ti_goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goals" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ti_assists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assists" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ti_yellow_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow_cards" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ti_red_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_cards" />

        </com.google.android.material.tabs.TabLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>